Add babel config

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h2>hello world ㅜㅜ</h2>
-    <a href="#">Next page!</a>
+    <a href="./nextpage.html">Next page!</a>
     <h2>hello?</h2>
-    <p>he</p>
+    <p>CLOCK!!</p>
   </body>
 </html>
