--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="./src/main.js"></script>
+    <link rel="stylesheet" href="./src/css/index.css" />
     <title>Document</title>
   </head>
   <body>
-    <h2>hello world ㅜㅜ</h2>
-    <a href="./nextpage.html">Next page!</a>
+    <h2>HELLO! Parcel and Netlify</h2>
+
     <h2>hello?</h2>
-    <p>CLOCK!!</p>
+    <p class="clock">CLOCK!!</p>
+    <div class="price-container">
+      <div class="price"></div>
+      <button>시세 조회 클릭!</button>
+    </div>
   </body>
 </html>
